--- a/Knowledge_learning_space.ipynb
+++ b/Knowledge_learning_space.ipynb
@@ -54,15 +54,15 @@
     "            self.prob_distribution = prob_distribution\n",
     "            \n",
     "        self.prob_distribution_items = {q : prob_K_q(K_mathcal, q,self.prob_distribution) for q in self.Q}    \n",
-    "        self.min_half = min([np.abs(p - 0.5) for p in self.prob_distribution_items.values()])    \n",
-    "        self.distance_half = [q for q in self.Q if np.abs(self.prob_distribution_items[q]  -0.5 ) \\\n",
-    "                              == self.min_half]\n",
+    "        min_half = min([np.abs(p - 0.5) for p in self.prob_distribution_items.values()])    \n",
+    "        distance_half = [q for q in self.Q if np.abs(self.prob_distribution_items[q]  -0.5 ) \\\n",
+    "                              == min_half]\n",
+    "        \n",
+    "        idx_next_item = np.random.randint(0,len(distance_half))\n",
+    "        \n",
+    "        self.next_item = distance_half[idx_next_item]\n",
     "        \n",
     "        self.responded_items = {q : [] for q in Q}\n",
-    "        \n",
-    "        idx_next_item = np.random.randint(0,len(self.distance_half))\n",
-    "        \n",
-    "        self.next_item = self.distance_half[idx_next_item]\n",
     "        \n",
     "    def simulation(self):\n",
     "        \n",
@@ -87,14 +87,14 @@
     "                \n",
     "        self.prob_distribution_items = {q : prob_K_q(K_mathcal, q,self.prob_distribution) for q in self.Q}    \n",
     "        \n",
-    "        self.min_half = min([np.abs(p - 0.5) for p in self.prob_distribution_items.values()])    \n",
+    "        min_half = min([np.abs(p - 0.5) for p in self.prob_distribution_items.values()])    \n",
     "            \n",
-    "        self.distance_half = [q for q in self.Q if np.abs(self.prob_distribution_items[q]  -0.5 ) \\\n",
-    "                              == self.min_half]\n",
+    "        distance_half = [q for q in self.Q if np.abs(self.prob_distribution_items[q]  -0.5 ) \\\n",
+    "                              == min_half]\n",
     "        \n",
-    "        idx_next_item = np.random.randint(0,len(self.distance_half))\n",
+    "        idx_next_item = np.random.randint(0,len(distance_half))\n",
     "        \n",
-    "        self.next_item = self.distance_half[idx_next_item]\n",
+    "        self.next_item = distance_half[idx_next_item]\n",
     "        \n",
     "    def response_item(self,r):\n",
     "        \n",
@@ -114,12 +114,12 @@
     "                self.prob_distribution[idx] = self.prob_distribution[idx] / S\n",
     "                \n",
     "        self.prob_distribution_items = {q : prob_K_q(K_mathcal, q,self.prob_distribution) for q in Q}    \n",
-    "        self.min_half = min([np.abs(p - 0.5) for p in self.prob_distribution_items.values()])    \n",
-    "        self.distance_half = [q for q in self.Q if np.abs(self.prob_distribution_items[q]  -0.5 ) \\\n",
-    "                              == self.min_half]\n",
+    "        min_half = min([np.abs(p - 0.5) for p in self.prob_distribution_items.values()])    \n",
+    "        distance_half = [q for q in self.Q if np.abs(self.prob_distribution_items[q]  -0.5 ) \\\n",
+    "                              == min_half]\n",
     "        \n",
-    "        idx_next_item = np.random.randint(0,len(self.distance_half))\n",
-    "        self.next_item = self.distance_half[idx_next_item]\n",
+    "        idx_next_item = np.random.randint(0,len(distance_half))\n",
+    "        self.next_item = distance_half[idx_next_item]\n",
     "        \n",
     "    def info_preguntas_respondidas(self):\n",
     "        \n",
@@ -703,29 +703,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "0d4dd322",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Probability(a)=0.05945223780895123\n",
-      "Probability(b)=0.9545758183032732\n",
-      "Probability(c)=0.18236472945891782\n",
-      "Probability(d)=0.9084836339345357\n",
-      "Probability(e)=0.010688042752171008\n"
-     ]
-    }
-   ],
-   "source": [
-    "for item, prob in network_learning.prob_distribution_items.items():\n",
-    "    print(f'Probability({item})={prob}')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "c53c17dd",
    "metadata": {},
@@ -780,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 45,
    "id": "24038894",
    "metadata": {},
    "outputs": [],
@@ -800,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 46,
    "id": "a542854f",
    "metadata": {},
    "outputs": [],
@@ -810,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 47,
    "id": "5a9951b4",
    "metadata": {},
    "outputs": [
@@ -820,7 +797,7 @@
        "{'a': [], 'b': [], 'c': [], 'd': [], 'e': []}"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -839,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 48,
    "id": "28917be0",
    "metadata": {},
    "outputs": [
@@ -866,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 49,
    "id": "785809c9",
    "metadata": {},
    "outputs": [
@@ -889,17 +866,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 50,
    "id": "91493754",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'a'"
+       "'d'"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -910,27 +887,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 51,
    "id": "95d00661",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Paula.response_item(1)"
+    "Paula.response_item(0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 52,
    "id": "091365dc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'a': [1], 'b': [], 'c': [], 'd': [], 'e': []}"
+       "{'a': [], 'b': [], 'c': [], 'd': [0], 'e': []}"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -941,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 53,
    "id": "a85c2600",
    "metadata": {},
    "outputs": [
@@ -949,15 +926,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Probability([])=0.04166666666666666\n",
-      "Probability(['a'])=0.16666666666666663\n",
-      "Probability(['b'])=0.04166666666666666\n",
-      "Probability(['a', 'b'])=0.16666666666666663\n",
-      "Probability(['b', 'd'])=0.04166666666666666\n",
-      "Probability(['a', 'b', 'c'])=0.16666666666666663\n",
-      "Probability(['a', 'b', 'd'])=0.16666666666666663\n",
-      "Probability(['b', 'c', 'd'])=0.04166666666666666\n",
-      "Probability(['a', 'b', 'c', 'd', 'e'])=0.16666666666666663\n"
+      "Probability([])=0.16666666666666666\n",
+      "Probability(['a'])=0.16666666666666666\n",
+      "Probability(['b'])=0.16666666666666666\n",
+      "Probability(['a', 'b'])=0.16666666666666666\n",
+      "Probability(['b', 'd'])=0.041666666666666664\n",
+      "Probability(['a', 'b', 'c'])=0.16666666666666666\n",
+      "Probability(['a', 'b', 'd'])=0.041666666666666664\n",
+      "Probability(['b', 'c', 'd'])=0.041666666666666664\n",
+      "Probability(['a', 'b', 'c', 'd', 'e'])=0.041666666666666664\n"
      ]
     }
    ],
@@ -968,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 54,
    "id": "cf2d5f48",
    "metadata": {},
    "outputs": [
@@ -976,11 +953,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Probability(a)=0.8333333333333331\n",
-      "Probability(b)=0.7916666666666665\n",
-      "Probability(c)=0.3749999999999999\n",
-      "Probability(d)=0.4166666666666666\n",
-      "Probability(e)=0.16666666666666663\n"
+      "Probability(a)=0.5833333333333333\n",
+      "Probability(b)=0.6666666666666665\n",
+      "Probability(c)=0.24999999999999997\n",
+      "Probability(d)=0.16666666666666666\n",
+      "Probability(e)=0.041666666666666664\n"
      ]
     }
    ],
@@ -991,17 +968,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 55,
    "id": "0b221c55",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'d'"
+       "'a'"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1012,17 +989,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 56,
    "id": "483dc0c9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Paula.response_item(0)"
+    "Paula.response_item(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 57,
    "id": "b6ff84cc",
    "metadata": {},
    "outputs": [
@@ -1032,7 +1009,7 @@
        "{'a': [1], 'b': [], 'c': [], 'd': [0], 'e': []}"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1043,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 58,
    "id": "806f9c26",
    "metadata": {},
    "outputs": [
@@ -1070,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 59,
    "id": "f451ae4b",
    "metadata": {},
    "outputs": [
@@ -1093,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 60,
    "id": "8e23eaa3",
    "metadata": {},
    "outputs": [
@@ -1103,7 +1080,7 @@
        "'c'"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1114,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 61,
    "id": "a58a5b75",
    "metadata": {},
    "outputs": [],
@@ -1124,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 62,
    "id": "a6be40b1",
    "metadata": {},
    "outputs": [
@@ -1134,7 +1111,7 @@
        "{'a': [1], 'b': [], 'c': [0], 'd': [0], 'e': []}"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1145,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 63,
    "id": "83a5f9f3",
    "metadata": {},
    "outputs": [
@@ -1172,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 64,
    "id": "720c163f",
    "metadata": {},
    "outputs": [
@@ -1195,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 65,
    "id": "98af27cb",
    "metadata": {},
    "outputs": [
@@ -1205,7 +1182,7 @@
        "'b'"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1216,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 66,
    "id": "ba630e1e",
    "metadata": {},
    "outputs": [],
@@ -1226,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 67,
    "id": "7be7942d",
    "metadata": {},
    "outputs": [
@@ -1236,7 +1213,7 @@
        "{'a': [1], 'b': [1], 'c': [0], 'd': [0], 'e': []}"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1247,7 +1224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 68,
    "id": "1b7a8686",
    "metadata": {},
    "outputs": [
@@ -1274,7 +1251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 69,
    "id": "c96afc1a",
    "metadata": {},
    "outputs": [
@@ -1297,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 70,
    "id": "e90c73b2",
    "metadata": {},
    "outputs": [
@@ -1307,7 +1284,7 @@
        "'d'"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1318,7 +1295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 71,
    "id": "981fc11c",
    "metadata": {},
    "outputs": [],
@@ -1328,7 +1305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 72,
    "id": "2c001915",
    "metadata": {},
    "outputs": [
@@ -1355,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 73,
    "id": "20469435",
    "metadata": {},
    "outputs": [
